<resources>
    <string name="app_name">Services4U</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Login_logout">Sign In</string>
    <string name="help_feedback">Help &amp; Feedback</string>


    <string name="action_sign_in_short">Sign in</string>
    <string name="email">Email</string>
    <string name="minimum_pass">Password Too Short</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="change_email">Change Email</string>
    <string name="send_password_reset_email">Send Password</string>
    <string name="remove_user">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get Registered now!</string>
    <string name="btn_link_to_login">Already registered? Login here!</string>
    <string name="title_acttivity_reset_password">ResetPassword Activity</string>
    <string name="btn_forget_password">Forget Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forget_password">Forget Password</string>
    <string name="forgot_password_msg">We just need your email to send you the link</string>
    <string name="title_activity_signup">Sign in</string>

    <string name="profile_name">User Profile</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


    <string name="service_title">Service Title</string>
    <string name="service_category">Category</string>
    <string name="title_activity_maps">Map</string>


</resources>
